--- a/css/index.css
+++ b/css/index.css
@@ -5,8 +5,11 @@
 }
 
 body {
-  background-color: #ddb887;
   font-family: "Courier New", Courier, monospace;
+  background-image: url("../img/background.png");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: auto;
 }
 
 ul {
@@ -57,6 +60,12 @@ h1 a {
 .error {
   color: #601125;
   background-color: #601125;
+}
+
+.notification {
+  color: #457345;
+  border-color: #457345;
+  border-style: solid;
 }
 
 .party {
