--- a/src/core/_config.scss
+++ b/src/core/_config.scss
@@ -11,8 +11,8 @@ $font-src: 'https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,4
 }
 
 // Set Theme Colors
-$main: #ddb887;
-$text: #402000;
+$base: #ddb887;
+$main: #402000;
 $primary: #69a0e8;
 $secondary: #4c5d70;
 $success: #457345;
@@ -24,8 +24,8 @@ $light: #acd8ff;
 $dark: #0a0c26;
 
 $color: (
+  "base": $base,
   "main": $main,
-  "text": $text,
   "primary": $primary,
   "secondary": $secondary,
   "success": $success,
@@ -39,12 +39,12 @@ $color: (
 );
 
 
-$main-light: lighten($main, 50%);
-$text-light: lighten($text, 50%);
+$main-light: lighten($base, 50%);
+$text-light: lighten($main, 50%);
 $primary-light: lighten($primary, 50%);
 $info-light: lighten($info, 50%);
 
-$text-dark: darken($text, 25%);
+$text-dark: darken($main, 25%);
 $primary-dark: darken($primary, 25%);
 $dark: darken($dark, 25%);
 
@@ -57,7 +57,12 @@ $global-header-font-size: 2rem !default;
 $header-font: 'Courier Prime' !default;
 $body-font: 'Courier Prime' !default;
 $button-font: 'Courier Prime' !default;
-$font-color: $text !default;
+$font-color: $main !default;
+$base-font-size: 1rem !default;
+$font-size-sm: $base-font-size * 0.75;
+$font-size-lg: $base-font-size * 1.5;
+$font-size-xl: $base-font-size * 2;
+$font-size-xxl: $base-font-size * 3;
 
 // Responsive breakpoints
 $large-screen: 1200px !default;
