--- a/src/layout/_flex-grid.scss
+++ b/src/layout/_flex-grid.scss
@@ -1,6 +1,14 @@
 @use "sass:math";
 
 $flex-grid-columns: 12;
+$flex-grid-gaps: (
+  "0": 0,
+  "1": 10px,
+  "2": 20px,
+  "3": 30px,
+);
+
+$layout-values: flex-start, flex-end, center, space-between, space-around;
 
 // base layout classes
 .container-flex {
@@ -17,10 +25,62 @@ $flex-grid-columns: 12;
 
 }
 
+// flex-grid classes
+
+@each $key, $value in $flex-grid-gaps {
+  .gap-#{$key} > * {
+    padding: $value;
+  }
+  .gap-#{$key} {
+    margin-left: -$value;
+    margin-right: -$value;
+  }
+}
+
 // column classes
 @include xs {
   @for $i from 1 through $flex-grid-columns {
     .col-#{$i}-xs {
+      box-sizing: border-box;
+      flex-grow: 0;
+      width: math.div($i * 100%, $flex-grid-columns);
+    }
+  }
+}
+
+@include sm {
+  @for $i from 1 through $flex-grid-columns {
+    .col-#{$i}-sm {
+      box-sizing: border-box;
+      flex-grow: 0;
+      width: math.div($i * 100%, $flex-grid-columns);
+    }
+  }
+}
+
+@include md {
+  @for $i from 1 through $flex-grid-columns {
+    .col-#{$i}-md {
+      box-sizing: border-box;
+      flex-grow: 0;
+      width: math.div($i * 100%, $flex-grid-columns);
+    }
+  }
+}
+
+@include lg {
+  @for $i from 1 through $flex-grid-columns {
+    .col-#{$i}-lg {
+      box-sizing: border-box;
+      flex-grow: 0;
+      width: math.div($i * 100%, $flex-grid-columns);
+    }
+  }
+}
+
+@include xl {
+  @for $i from 1 through $flex-grid-columns {
+    .col-#{$i}-xl {
       box-sizing: border-box;
       flex-grow: 0;
       width: math.div($i * 100%, $flex-grid-columns);
