--- a/src/layout/_flex-grid.scss
+++ b/src/layout/_flex-grid.scss
@@ -25,7 +25,7 @@ $layout-values: flex-start, flex-end, center, space-between, space-around;
 
 }
 
-// flex-grid classes
+// flex-grid gaps
 
 @each $key, $value in $flex-grid-gaps {
   .gap-#{$key} > * {
@@ -34,6 +34,13 @@ $layout-values: flex-start, flex-end, center, space-between, space-around;
   .gap-#{$key} {
     margin-left: -$value;
     margin-right: -$value;
+  }
+}
+
+//justify content classes
+@each $value in $layout-values {
+  .justify-#{$value} {
+    justify-content: $value;
   }
 }
 
