--- a/src/core/_config.scss
+++ b/src/core/_config.scss
@@ -15,10 +15,10 @@ $base: #ddb887;
 $main: #402000;
 $primary: #69a0e8;
 $secondary: #4c5d70;
-$success: #457345;
+$success: #006D5B;
 $error: #601125;
 $warning: #af7e0b;
-$info: #006666;
+$info: #004a58;
 $party: #b887dd;
 $light: #acd8ff;
 $dark: #0a0c26;
