--- a/src/components/_fancy-box.scss
+++ b/src/components/_fancy-box.scss
@@ -1,17 +1,19 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700);
-
+@use 'sass:math';
 
 .box {
+  @include shadow;
+  place-items: center;
   text-align: left;
-  position: absolute;
+  position: relative;
   top: 50%;
   left: 50%;
   transform: translate3d(-50%, -50%, 0);
-  background-color: $base;
+  background-color: inherit;
   width: 100%;
   max-width: 600px;
   padding: 5px;
   border: 2px solid $main;
+  
 
   &:before,
   &:after {
@@ -33,10 +35,6 @@
 
   &:after {
     right: 5px;
-  }
-
-  .box-title {
-    margin-left: 2rem;
   }
 
   .box-inner {
@@ -67,4 +65,10 @@
       right: -2px;
     }
   }
+}
+
+.box:hover {
+  cursor: crosshair;
+  box-shadow: $shadow-hover;
+  will-change: transform;
 }
