--- a/src/layout/_flex-grid.scss
+++ b/src/layout/_flex-grid.scss
@@ -1,11 +1,11 @@
-@use "sass:math";
+@use 'sass:math';
 
 $flex-grid-columns: 12;
 $flex-grid-gaps: (
-  "0": 0,
-  "1": 10px,
-  "2": 20px,
-  "3": 30px,
+  '0': 0,
+  '1': 10px,
+  '2': 20px,
+  '3': 30px
 );
 
 $layout-values: flex-start, flex-end, center, space-between, space-around;
@@ -22,7 +22,6 @@ $layout-values: flex-start, flex-end, center, space-between, space-around;
 .row-flex {
   display: flex;
   flex-flow: row wrap;
-
 }
 
 // flex-grid gaps
