--- a/src/components/_form.scss
+++ b/src/components/_form.scss
@@ -1,45 +1,46 @@
-@use "sass:math";
+@use 'sass:math';
 
 $base-width: 6.25rem;
-.textfield {
+
+input[type='textarea'] {
   background-color: inherit;
   outline: none;
   margin-bottom: 0.5rem;
 }
 
 $formValues: (
-  "padding-right": (
-    "prefix": "field-width",
-    "values": (
-      "default": $base-padding,
-      "0": 0,
-      "1": $base-width,
-      "2": $base-width * 2,
-      "3": $base-width * 3,
-      "4": $base-width * 4,
-      "max": 85%,
-    ),
+  'padding-right': (
+    'prefix': 'field-width',
+    'values': (
+      'default': $base-padding,
+      '0': 0,
+      '1': $base-width,
+      '2': $base-width * 2,
+      '3': $base-width * 3,
+      '4': $base-width * 4,
+      'max': 75%
+    )
   ),
-  "padding-bottom": (
-    "prefix": "field-depth",
-    "values": (
-      "default": $base-padding,
-      "0": 0,
-      "1": $base-width,
-      "2": $base-width * 1.25,
-      "3": $base-width * 2,
-      "4": $base-width * 2.5,
-      "max": 50%,
-    ),
-  ),
+  'padding-bottom': (
+    'prefix': 'field-depth',
+    'values': (
+      'default': $base-padding,
+      '0': 0,
+      '1': $base-width,
+      '2': $base-width * 1.25,
+      '3': $base-width * 2,
+      '4': $base-width * 2.5,
+      'max': 50%
+    )
+  )
 );
 
 @each $prop, $map in $formValues {
-  $prefix: map-get($map, "prefix");
-  $values: map-get($map, "values");
+  $prefix: map-get($map, 'prefix');
+  $values: map-get($map, 'values');
 
   @each $key, $val in $values {
-    @if ($key == "default") {
+    @if ($key == 'default') {
       .#{$prefix} {
         #{$prop}: $val;
       }
